Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1798

File manager is broken on OS X

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.2.0
    • 1.2.0
    • None
    • None

    Description

      I1209 14:43:32.670500 1985855488 env_posix.cc:1263] Raising process file limit from 256 to 9223372036854775807
      F1209 14:43:32.670521 1985855488 env_posix.cc:1266] Check failed: setrlimit(RLIMIT_NOFILE, &l) == 0 : Invalid argument [22]
      *** Check failure stack trace: ***
          @        0x1068648bd  google::LogMessage::Flush()
          @        0x106864743  google::LogMessage::~LogMessage()
          @        0x106865685  google::ErrnoLogMessage::~ErrnoLogMessage()
          @        0x106333a57  kudu::(anonymous namespace)::PosixEnv::IncreaseOpenFileLimit()
          @        0x1058b642f  kudu::fs::GetFileCacheCapacityForBlockManager()::$_0::operator()()
          @        0x1058b63fb  _ZNSt3__117__call_once_proxyINS_5tupleIJOZN4kudu2fs35GetFileCacheCapacityForBlockManagerEPNS2_3EnvEE3$_0EEEEEvPv
          @     0x7fff921cb6e9  std::__1::__call_once()
          @        0x1058b5acb  kudu::fs::GetFileCacheCapacityForBlockManager()
          @        0x1058f12ee  kudu::fs::FileBlockManager::FileBlockManager()
          @        0x1058f1b85  kudu::fs::FileBlockManager::FileBlockManager()
          @        0x1058ff046  kudu::FsManager::InitBlockManager()
          @        0x1058fe6fc  kudu::FsManager::Init()
          @        0x1058ff9fc  kudu::FsManager::Open()
          @        0x10408d737  kudu::server::ServerBase::Init()
          @        0x103759d2c  kudu::master::Master::Init()
          @        0x1036a6837  kudu::master::MasterMain()
          @        0x1036a6132  main
          @     0x7fff86a7e5ad  start
          @               0x13  (unknown)
      ../../src/kudu/integration-tests/master-stress-test.cc:124: Failure
      Failed
      Bad status: Runtime error: Failed to add distributed masters: Unable to start Master at index 0: /Users/dinesh/Documents/kudu_exp2/kudu/build/debug/./bin/kudu-master: process exited on signal 6
      

      Attachments

        Activity

          People

            dineshabbi Dinesh Bhat
            dineshabbi Dinesh Bhat
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: