KUDU-1798: [env] File manager broken on OS X 10.11

Env::IncreaseOpenFileLimit() relies upon few system calls which behave
differently on OS X 10.11 than on Linux or other versions of macOS. See
the new comment in env_posix.cc for details.

Change-Id: Idb18b4e52ad80f89f61a92898c50c479643c12ec
Reviewed-on: http://gerrit.cloudera.org:8080/5438
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
Tested-by: Kudu Jenkins
(cherry picked from commit 8e1a8c550408bbd9c580d2dfe6fb22ce8e8c958c)
Reviewed-on: http://gerrit.cloudera.org:8080/5452
Reviewed-by: Jean-Daniel Cryans <jdcryans@apache.org>